@@ -6,14 +6,17 @@ import lib.Dijkstra;
 import lib.Dijkstra.CharMatrix;
 import lib.Matrix;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.OptionalInt;
 import java.util.stream.Stream;
+
+import static java.util.stream.Collectors.toList;
 
 @SuppressWarnings("unused")
 public class Day18 extends Day {
 
     private List<Coordinate> bytePositions;
-
     private char[][] map;
     private Coordinate start;
     private Coordinate end;
@@ -30,7 +33,7 @@ public class Day18 extends Day {
                     String[] split = s.split(",");
                     return new Coordinate(split[1], split[0]);
                 })
-                .toList();
+                .collect(toList());
 
         int rowsAndColumns = mode() == Mode.REAL_INPUT ? 71 : 7;
         map = Matrix.matrix(rowsAndColumns, rowsAndColumns, '.');
@@ -41,13 +44,11 @@ public class Day18 extends Day {
 
     @Override
     protected Object part1(Stream<String> input) {
-        List<Coordinate> limitedPositions = bytePositions.stream()
-                .limit(mode() == Mode.REAL_INPUT ? 1024 : 12)
-                .toList();
+        int initialSet = mode() == Mode.REAL_INPUT ? 1024 : 12;
+        List<Coordinate> initialPositions = bytePositions.subList(0, initialSet);
+        bytePositions = new ArrayList<>(bytePositions.subList(initialSet, bytePositions.size()));
 
-        char[][] map = Matrix.deepClone(this.map);
-
-        for (Coordinate bytePosition : limitedPositions) {
+        for (Coordinate bytePosition : initialPositions) {
             bytePosition.set(map, '#');
         }
 
@@ -58,6 +59,34 @@ public class Day18 extends Day {
                 (charMatrix, direction, current, next) -> 1
         );
 
-        return dijkstra.traverse(); // Your puzzle answer was 338
+        return dijkstra.traverse().orElseThrow(); // Your puzzle answer was 338
+    }
+
+    @Override
+    protected Object part2(Stream<String> input) {
+        Coordinate firstBlocking = null;
+        while (!bytePositions.isEmpty()) {
+            Coordinate c = bytePositions.removeFirst();
+            c.set(map, '#');
+
+            Dijkstra<CharMatrix> dijkstra = new Dijkstra<>(
+                    new CharMatrix(map, coordinate -> coordinate.at(map) != '#'),
+                    start,
+                    end,
+                    (charMatrix, direction, current, next) -> 1
+            );
+
+            OptionalInt result = dijkstra.traverse();
+            if (result.isEmpty()) {
+                firstBlocking = c;
+                break;
+            }
+        }
+
+        if (firstBlocking == null) {
+            throw new IllegalStateException();
+        }
+
+        return firstBlocking.column() + "," + firstBlocking.row(); // Your puzzle answer was 20,44
     }
 }
